--- a/config.org
+++ b/config.org
@@ -40,6 +40,12 @@ There are two ways to load a theme. Both assume the theme is installed and avail
 #+BEGIN_SRC emacs-lisp
 (setq doom-theme 'doom-one)
 #+END_SRC
+** Set Banner
+#+BEGIN_SRC emacs-lisp
+(after! doom-dashboard
+  (setq! +doom-dashboard-banner-dir (concat doom-private-dir "banners"))
+  (setq! +doom-dashboard-banner-file "emacs-pen-3d.png"))
+#+END_SRC
 ** Line number style
 This determines the style of line numbers in effect. If set to `nil', line numbers are disabled. For relative line numbers, set this to `relative'.
 #+BEGIN_SRC emacs-lisp
@@ -108,6 +114,11 @@ First, we set up unique names for the X Window names, so we can easily reference
 (defvar efm/shell-name "emacs-frame-manager336")
 (defvar efm/org-name "emacs-frame-manager920")
    #+END_SRC
+** Default buffer
+The default buffer to load.
+#+BEGIN_SRC emacs-lisp
+(setq efm/default-buffer "*doom*")
+#+END_SRC
 ** Extra frames
 When emacs runs in daemon mode under systemd, emacsclient can, and sometimes will, create extra frames when you execute a command with emacsclient that does not need a frame, before any frames have been opened, and then execute emacsclient with a new frame. We keep track of legitimate frames, so we can just delete the unneeded frames. If you add new frames above that you intend to use, be sure to add them to this list, so they do not get inadvertently deleted.
    #+BEGIN_SRC emacs-lisp :tangle +emacs-frame-manager.el
@@ -167,12 +178,16 @@ Utility functions for frame management. These find frames, suspend frames, raise
   (when command
     (eval (list (intern command)))))
 
+(defun efm/run-command (command)
+  (cond ((string-equal command default-buffer) (switch-to-buffer efm/default-buffer))
+        ((string-equal command "doom-buffer") (+doom-dashboard/open (car (efm/find-frame efm/frame-name))))))
+
 (defun efm/start-client-with-command (name title &optional command skip-taskbar)
   "Create a new frame, executing command."
   (efm/create-frame name title)
   (if command
       (eval (list (intern command)))
-    (switch-to-buffer "*dashboard*"))
+    (efm/run-command "doom-buffer"))
   (when skip-taskbar
     (modify-frame-parameters (car (efm/find-frame name)) '((skip-taskbar t)
                                                            (undecorated t)))))
@@ -433,16 +448,18 @@ If you use `org' and don't want your org files in the default location below, ch
 (package! ox-gfm)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! ox-gfm)
+(after! org
+  (use-package! ox-gfm))
 #+END_SRC
 *** Pretty bullets
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! org-bullets)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! org-bullets
+(after! org
+  (use-package! org-bullets
   :config
-  (add-hook! 'org-mode-hook #'org-bullets-mode))
+  (add-hook! 'org-mode-hook #'org-bullets-mode)))
 #+END_SRC
 *** Convert org to OpenOffice
 #+BEGIN_SRC emacs-lisp
@@ -453,43 +470,47 @@ If you use `org' and don't want your org files in the default location below, ch
 (package! ob-racket :recipe (:host github :repo "wallyqs/ob-racket"))
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! ob-racket)
+(after! org
+  (use-package! ob-racket))
 #+END_SRC
 *** Jira
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! org-jira :pin "melpa")
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! org-jira)
+(after! org
+  (use-package! org-jira))
 #+END_SRC
 *** Projectile
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! org-projectile)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! org-projectile
-  :bind (("C-c n p" . org-projectile-project-todo-completing-read)
+(after! org
+  (use-package! org-projectile
+    :bind (("C-c n p" . org-projectile-project-todo-completing-read)
            ("C-c c" . org-capture))
-  :config
-  (if (string= system-name "scholasticus")
-          (setq! org-projectile-projects-file
-                "~/org/GTD/work/code-projects.org")
+    :config
+    (if (string= system-name "scholasticus")
         (setq! org-projectile-projects-file
-              "~/org/GTD/home/code-projects.org"))
-      (setq! org-agenda-files (append org-agenda-files (org-projectile-todo-files)))
-      (push (org-projectile-project-todo-entry) org-capture-templates))
+               "~/org/GTD/work/code-projects.org")
+      (setq! org-projectile-projects-file
+             "~/org/GTD/home/code-projects.org"))
+    (setq! org-agenda-files (append org-agenda-files (org-projectile-todo-files)))
+    (push (org-projectile-project-todo-entry) org-capture-templates)))
 #+END_SRC
 *** org2blog
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! org2blog)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(use-package! org2blog
-  :config
-  (setq! org2blog/wp-blog-alist
-          '(("timhawes"
-             :url "https://timhawes.wordpress.com/xmlrpc.php"
-             :username "timotheosh"))))
+(after! org
+  (use-package! org2blog
+    :config
+    (setq! org2blog/wp-blog-alist
+           '(("timhawes"
+              :url "https://timhawes.wordpress.com/xmlrpc.php"
+              :username "timotheosh")))))
 #+END_SRC
 *** org-protocol
 #+BEGIN_SRC emacs-lisp
