--- a/config.org
+++ b/config.org
@@ -42,9 +42,8 @@ There are two ways to load a theme. Both assume the theme is installed and avail
 #+END_SRC
 ** Set Banner
 #+BEGIN_SRC emacs-lisp
-(after! doom-dashboard
-  (setq! +doom-dashboard-banner-dir (concat doom-private-dir "banners"))
-  (setq! +doom-dashboard-banner-file "emacs-pen-3d.png"))
+(setq fancy-splash-image
+      (concat doom-private-dir "banners/" "emacs-pen-3d.png"))
 #+END_SRC
 ** Line number style
 This determines the style of line numbers in effect. If set to `nil', line numbers are disabled. For relative line numbers, set this to `relative'.
