--- a/config.org
+++ b/config.org
@@ -71,15 +71,6 @@ This determines the style of line numbers in effect. If set to `nil', line numbe
   (map! :map counsel-M-x-map
         :g "TAB" #'ivy-partial))
 #+END_SRC
-** Multi-term
-#+BEGIN_SRC emacs-lisp
-(map! "C-M-<right>" 'multi-term-next
-      "C-M-<left>" 'multi-term-prev)
-#+END_SRC
-** Shell-pop
-#+BEGIN_SRC emacs-lisp
-(map! "<f3>" '+eshell/toggle)
-#+END_SRC
 * Additional Macros
 Here are some additional functions/macros that could help you configure Doom:
 - ~load!~ for loading external *.el files relative to this one
@@ -259,9 +250,19 @@ Use Gmail in gnus
 #+BEGIN_SRC emacs-lisp
 (load! "+dired")
 #+END_SRC
-* Eshell
-** Packages
-*** [[https://github.com/tom-tan/esh-help][esh-help]] for Eshell help
+* Shells
+** Multi-vterm
+#+BEGIN_SRC emacs-lisp :tangle packages.el
+(package! multi-vterm)
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(use-package! multi-vterm)
+(map! "C-M-<right>" 'multi-vterm-next
+      "C-M-<left>" 'multi-vterm-prev)
+#+END_SRC
+** Eshell
+*** Packages
+**** [[https://github.com/tom-tan/esh-help][esh-help]] for Eshell help
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! esh-help)
 #+END_SRC
@@ -270,14 +271,14 @@ Use Gmail in gnus
   (use-package! esh-help)
   (setup-esh-help-eldoc))
 #+END_SRC
-*** [[https://github.com/emacsmirror/multi-eshell][Multiple eshell]] Original blog seems to be missing, but available on marmalade.
+**** [[https://github.com/emacsmirror/multi-eshell][Multiple eshell]] Original blog seems to be missing, but available on marmalade.
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! multi-eshell)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
 (use-package! multi-eshell)
 #+END_SRC
-*** [[https://github.com/porterjamesj/virtualenvwrapper.el][Virtualenvwrapper]] for Emacs
+**** [[https://github.com/porterjamesj/virtualenvwrapper.el][Virtualenvwrapper]] for Emacs
 [[https://virtualenvwrapper.readthedocs.io/en/latest/][Virtualenvwrapper]] is a set of extensions for more easily managing multiple virtualenv's for Python. It is available on Debian and Ubuntu systems. This is an Emacs module that interfaces with that system, making it easy to use in Eshell and Emacs proper.
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! virtualenvwrapper)
@@ -286,8 +287,8 @@ Use Gmail in gnus
 (use-package! virtualenvwrapper)
 (setq! venv-location "~/.virtualenvs/")
 #+END_SRC
-** Settings
-*** Custom magit commands in eshell
+*** Settings
+**** Custom magit commands in eshell
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (defun eshell/mgit (&rest args)
   "Using magit in eshell"
@@ -304,7 +305,7 @@ Use Gmail in gnus
       (log "magit-log-all-branches")))
     t)))
 #+END_SRC
-*** Custom dpkg commands in eshell
+**** Custom dpkg commands in eshell
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (defun eshell/deb (&rest args)
   "deb command for eshell"
@@ -335,7 +336,7 @@ Use Gmail in gnus
        (format "dlocate %s" where))))
     t)))
 #+END_SRC
-*** Eshell history settings
+**** Eshell history settings
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (setq eshell-history-size 1024)
 
@@ -347,11 +348,11 @@ Use Gmail in gnus
     (setq eshell-ask-to-save-history 'always)) ; For older(?) version
                                         ;(message "eshell-ask-to-save-history is %s" eshell-ask-to-save-history)
 #+END_SRC
-*** Tramp settings for eshell
+**** Tramp settings for eshell
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (require 'esh-module) ;; load tramp functions into eshell
 #+END_SRC
-*** Custom prompt
+**** Custom prompt
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! eshell-prompt-extras)
 #+END_SRC
@@ -369,21 +370,21 @@ Use Gmail in gnus
           epe-show-python-info t
           epe-path-style 'single)))
 #+END_SRC
-** Modules
+*** Modules
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (add-to-list 'eshell-modules-list 'eshell-tramp 'esh-opt)
 #+END_SRC
-** Preferred functions and variables
+*** Preferred functions and variables
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (setq eshell-prefer-lisp-functions t)
 (setq eshell-prefer-lisp-variables t)
 #+END_SRC
-** Password caching
+*** Password caching
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 (setq password-cache t) ; enable password caching
 (setq password-cache-expiry 300) ; for 5 minutes (time in secs)
 #+END_SRC
-** Progress bar for apt in minibuffer
+*** Progress bar for apt in minibuffer
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 ;; Progress bars, like apt in the status/echo area
 (advice-add
@@ -411,7 +412,7 @@ Display progress in the mode line instead."
     "%" "%%"
     (ansi-color-apply progress))))
 #+END_SRC
-** Visual commands
+*** Visual commands
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 ;; Visual commands
 ;; defaults are ("vi" "screen" "top" "less" "more" "lynx" "ncftp" "pine" "tin" "trn" "elm")
@@ -419,7 +420,7 @@ Display progress in the mode line instead."
 (dolist (cmd '("tmux" "aptitude" "aws-shell" "neofetch" "htop"))
   (add-to-list 'eshell-visual-commands cmd))
 #+END_SRC
-** Use Emacs completion package for Eshell
+*** Use Emacs completion package for Eshell
 #+BEGIN_SRC emacs-lisp :tangle +eshell.el
 ;; Uses the default Emacs completion package for tab-complete in eshell.
 (add-hook 'eshell-mode-hook
@@ -427,9 +428,13 @@ Display progress in the mode line instead."
             (define-key eshell-mode-map (kbd "<tab>")
               (lambda () (interactive) (pcomplete-std-complete)))))
 #+END_SRC
-** Load Eshell Settings
+*** Load Eshell Settings
 #+BEGIN_SRC emacs-lisp
 (load! "+eshell.el")
+#+END_SRC
+** Shell-pop
+#+BEGIN_SRC emacs-lisp
+(map! "<f3>" '+eshell/toggle)
 #+END_SRC
 * Org-mode
 ** Org files location
