--- a/config.org
+++ b/config.org
@@ -576,13 +576,13 @@ Just ~(add-hook! /programming-mode-hook/ #'aggressive-indent-mode)~ to activate.
 #+END_SRC
 **** [[https://github.com/company-mode/company-quickhelp][Company-quickhelp]] for on the fly documentation.
 #+BEGIN_SRC emacs-lisp :tangle packages.el
-(package! company-quickhelp)
+;;(package! company-quickhelp)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
-(after! company
-  (setq! company-quickhelp-delay 0.2))
-(map! :map company-active-map
-      :g "C-c h" #'company-quickhelp-manual-begin)
+;;(after! company
+;;  (setq! company-quickhelp-delay 0.2))
+;;(map! :map company-active-map
+;;      :g "C-c h" #'company-quickhelp-manual-begin)
 #+END_SRC
 **** Code folding
 #+BEGIN_SRC emacs-lisp :tangle packages.el
@@ -704,7 +704,29 @@ See also the Github repo [[https://github.com/cxxxr/cl-lsp.git][cl-lsp]].
 (load! "+emacs-lisp.el")
 #+END_SRC
 ** Python
-*** Set Interpreter
+*** Elpy mode instead of anaconda-mode
+#+BEGIN_SRC emacs-lisp :tangle packages.el
+(package! anaconda-mode :ignore t)
+(package! python-mode)
+(package! elpy)
+(package! jedi)
+#+END_SRC
 #+BEGIN_SRC emacs-lisp
-(setq python-shell-interpreter "ipython")
+(use-package! python-mode
+  :config
+  (setq py-max-specpdl-size 5000))
+(after! python-mode
+  (use-package! jedi
+    :commands jedi:setup)
+  (use-package! elpy
+    ;; NOTE: Elpy makes use of py-flake. You may have to change
+    ;; settings in ~/.config/flake8
+    :config
+    (elpy-enable))
+  (setq! indent-tabs-mode nil ;; Spaces, not tabs!
+         tab-width (default-value 'tab-width)
+         python-shell-interpreter "ipython"
+         python-shell-interpreter-args "--simple-prompt -i"
+         elpy-dedicated-shells t
+         jedi:complete-on-dot t))
 #+END_SRC
